--- a/.ENV
+++ b/.ENV
@@ -1,7 +1,7 @@
-NOTION_DATABASE_ID=c3128c31a9ca4afaa2deeed0be75d35a
-NOTION_API_KEY=secret_4CVfikaIVxmk5P4egRNvV95eFBIqOfgCWZOaJ6TSlXX
+NOTION_DATABASE_ID=
+NOTION_API_KEY=
 PORT=3000
 NOTION_LINKS_ID=J%5BCY
 NOTION_TAGS_ID=zTsZ
 NOTION_DATE_ID=kRIA
-NOTION_DESCRIPTION_ID=title
+NOTION_DESCRIPTION_ID=title//
